k8s/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe-lms
  namespace: apptolast-frappe-lms
  labels:
    app: frappe-lms
    environment: production
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: frappe-lms
    environment: production
  sessionAffinity: None
